--- a/requirements.txt
+++ b/requirements.txt
@@ -81,7 +81,7 @@ sphinxcontrib-serializinghtml==2.0.0
 SQLAlchemy==2.0.39
 stack-data==0.6.3
 tabulate==0.9.0
-tornado==6.4.2
+tornado>=6.5.0
 traitlets==5.14.3
 typing_extensions==4.12.2
 uc-micro-py==1.0.3
